# ribd

./: .gitignore  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_client_msg.rs  decode_query_reply.rs  decode_query_request.rs  decode_server_msg.rs
ribd/: Cargo.toml
ribd-client/: Cargo.toml
ribd-client/src/: lib.rs
ribd-proto/: Cargo.toml
ribd-proto/src/: lib.rs
ribd-routemap/: Cargo.toml
ribd-routemap/src/: lib.rs
ribd/src/: config.rs  kernel_backend.rs  kernel_backend_stub.rs  lib.rs  local_addrs.rs  main.rs  rib.rs  session.rs  vpp_backend.rs
ribd/tests/: chunked_bulk_session.rs  dfz_scale_bench.rs  kernel_backend_live.rs  real_session_server.rs  session_integration.rs
