[package]
name = "ribd-proto"
version = "0.1.0"
edition = "2021"
description = "Wire protocol types for the ribd RIB daemon"
license = "LGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
serde = { version = "1", features = ["derive"] }
# default-features=false drops postcard's `heapless-cas` default, which
# transitively pulls the unmaintained `atomic-polyfill 1.0.3`
# (RUSTSEC-2023-0089). ribd-proto only uses to_allocvec / from_bytes /
# Error, all of which need just the `alloc` feature.
postcard = { version = "1", default-features = false, features = ["alloc"] }
thiserror = "1"
